# drivendata-stac-overflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-build.yml
stac_overflow/: Dockerfile  split_images_by_flood_ids.py  train_segmentation_model.py
stac_overflow/notebooks/: common.py  plotting.py
stac_overflow/submission/: inputs.py  main.py
stac_overflow/utils/: colormaps.py  datasets.py  datasets_test.py  fileutils.py  logging.py  losses.py  metrics.py
