[metadata]
name = stac_overflow
url = https://github.com/stefanistrate/drivendata-stac-overflow
author = Ștefan Istrate
author_email = stefan.istrate@gmail.com
description = Code for the STAC Overflow competition on DrivenData.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    earth
    floodwater
    machine-learning

[options]
packages =
    stac_overflow
python_requires = >=3.7,
install_requires =
    absl-py
    albumentations
    apache-beam
    matplotlib
    numpy
    opencv-python-headless
    pandas
    Pillow
    python-snappy
    rasterio
    segmentation-models
    tensorflow ~= 2.7.0
    tensorflow-addons
    tensorflow-hub
    tifffile
    tqdm
    wandb

[options.extras_require]
dev =
    ipykernel
    lightning-grid
    memory-profiler
    pretty_errors
    pylint
    pytest
